--- a/music_api/templates/users/profile.html
+++ b/music_api/templates/users/profile.html
@@ -26,55 +26,12 @@
     {% endif %}
 
     <div class="row g-4 pre-animation" id="blcok-avatar">
-        <div class="col-lg-4 profile-avatar-column">
-            <section class="profile-widget text-center profile-avatar-card">
-
-                <div class="profile-avatar-shell d-flex flex-column align-items-center">
-
-                    <div class="profile-avatar-wrap mb-4">
-                        {% if user.avatar %}
-                            <img src="{{ user.avatar.url }}" alt="Avatar" class="profile-avatar">
-                        {% else %}
-                            <div class="profile-avatar-placeholder">
-                                <i class="bi bi-person-fill"></i>
-                            </div>
-                        {% endif %}
-                    </div>
-
-                    <input type="file" class="visually-hidden" name="avatar" id="avatar" accept="image/*">
-                    <label for="avatar"
-                           class="profile-avatar-edit d-inline-flex align-items-center justify-content-center gap-2">
-                        <i class="bi bi-pencil"></i>
-                        <span class="profile-avatar-edit-text fw-normal text-dark">
-                            Изменить аватар
-                        </span>
-                    </label>
-                    {% if form.avatar.errors %}
-                        <div class="text-danger small mt-2">{{ form.avatar.errors|join:", " }}</div>
-                    {% endif %}
-
-                    {% if request.user.is_public_favorites %}
-                        <a href="{% url 'public_user_page' request.user.username %}"
-                           class="profile-public-link d-inline-flex align-items-center justify-content-center gap-2 mt-3 text-decoration-none">
-                            <i class="bi bi-box-arrow-up-right"></i>
-                            <span class="profile-avatar-edit-text fw-normal text-dark">
-                                Публичная страница
-                            </span>
-                        </a>
-                    {% endif %}
-
-                </div>
-
-            </section>
-        </div>
-
-        
-        <div class="col-lg-8">
+        <div class="col-lg-8 order-lg-1 order-2">
 
             <div class="vstack gap-4">
 
                 <section class="profile-widget pre-animation" id="block-info">
-                    <i class="bi bi-gear fs-4 text-danger"></i>
+                    <i class="bi bi-gear-fill fs-4 text-danger"></i>
                     <div class="profile-widget-title fs-5">Основная информация</div>
 
                     <div class="row g-3">
@@ -112,7 +69,7 @@
 
 
                 <section class="profile-widget pre-animation" id="block-info-two">
-                    <i class="bi bi-gear fs-4 text-danger"></i>
+                    <i class="bi bi-gear-fill fs-4 text-danger"></i>
                     <div class="profile-widget-title fs-5">Дополнительно</div>
 
                     <div class="row g-3">
@@ -175,7 +132,7 @@
                 </section>
 
                 <section class="profile-widget pre-animation" id="block-password">
-                    <i class="bi bi-shield-lock fs-4 text-danger"></i>
+                    <i class="bi bi-shield-lock-fill fs-4 text-danger"></i>
                     <div class="profile-widget-title fs-5">Смена пароля</div>
 
                     <div class="row g-3">
@@ -207,7 +164,7 @@
 
                 <section class="profile-widget pre-animation" id="block-like-notifications">
                     <div class="d-flex align-items-center flex-nowrap gap-2 mb-3">
-                        <i class="bi bi-heart fs-4 text-danger"></i>
+                        <i class="bi bi-heart-fill fs-4 text-danger"></i>
                         <div class="profile-widget-title fs-5 text-nowrap mb-0">Лайки публичного избранного</div>
                     </div>
 
@@ -240,8 +197,49 @@
 
         </div>
 
+        <div class="col-lg-4 profile-avatar-column order-lg-2 order-1">
+            <section class="profile-widget text-center profile-avatar-card">
+
+                <div class="profile-avatar-shell d-flex flex-column align-items-center">
+
+                    <div class="profile-avatar-wrap mb-4">
+                        {% if user.avatar %}
+                            <img src="{{ user.avatar.url }}" alt="Avatar" class="profile-avatar">
+                        {% else %}
+                            <div class="profile-avatar-placeholder">
+                                <i class="bi bi-person-fill"></i>
+                            </div>
+                        {% endif %}
+                    </div>
+
+                    <input type="file" class="visually-hidden" name="avatar" id="avatar" accept="image/*">
+                    <label for="avatar"
+                           class="profile-avatar-edit d-inline-flex align-items-center justify-content-center gap-2">
+                        <i class="bi bi-pencil"></i>
+                        <span class="profile-avatar-edit-text fw-normal text-dark">
+                            Изменить аватар
+                        </span>
+                    </label>
+                    {% if form.avatar.errors %}
+                        <div class="text-danger small mt-2">{{ form.avatar.errors|join:", " }}</div>
+                    {% endif %}
+
+                    {% if request.user.is_public_favorites %}
+                        <a href="{% url 'public_user_page' request.user.username %}"
+                           class="profile-public-link d-inline-flex align-items-center justify-content-center gap-2 mt-3 text-decoration-none">
+                            <i class="bi bi-box-arrow-up-right"></i>
+                            <span class="profile-avatar-edit-text fw-normal text-dark">
+                                Публичная страница
+                            </span>
+                        </a>
+                    {% endif %}
+
+                </div>
+
+            </section>
+        </div>
+
     </div>
 </form>
-</div>
 
 {% endblock %}
