feat: добавлен throttling в DRF, индексы базы данных и поддержка MBID

--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -185,7 +185,7 @@
         <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title fw-semibold" id="artistBioModalTitle">Биография артиста</h5>
+                    <h5 class="modal-title fw-semibold fs-4" id="artistBioModalTitle">Биография артиста</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                 </div>
                 <div class="modal-body">
