feat(websocket): добавлены уведомления о лайках в реальном времени через Django Channels с тестами

--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -234,6 +234,7 @@
     <script src="/static/js/features/public_playlists_dashboard.js"></script>
     <script src="/static/js/features/music_search.js"></script>
     <script src="/static/js/features/artist_wikipedia_modal.js"></script>
+    <script src="/static/js/features/realtime_notifications.js"></script>
 
     <!-- Модули поиска и UI-специфичные скрипты -->
     <script src="/static/js/UI/scrollbutton.js"></script>
